[package]
name = "h-encoder"
version = "1.0.0"
authors = ["Leo Krashanoff <leo@krashanoff.com>"]
edition = "2018"
description = "For the dead week ğ“®ğ“·ğ“³ğ“¸ğ”‚ğ“®ğ“»."
documentation = "https://github.com/krashanoff/H"
homepage = "https://github.com/krashanoff/H"
repository = "https://github.com/krashanoff/H"
readme = "README.md"
license = "WTFPL"
keywords = ["h", "encoding", "dead", "week"]
categories = ["command-line-utilities", "encoding"]
